--- a/languages/de-DE/de-DE.mod_articles_news_load_more.ini
+++ b/languages/de-DE/de-DE.mod_articles_news_load_more.ini
@@ -83,7 +83,7 @@ MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_COLOR_HEADLINE_DESC="Hier kann die Schri
 MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_COLOR_LABEL="Farbe Borders"
 MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_COLOR_DESC="Hier kann die Farbe für die Borders im Bereich rgba angepasst werden"
 MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_WIDTH_LABEL="Border Breite"
-MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_WIDTH_DESC="Hier kann die Sträke der Borders in px, % usw angegeben werden"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_WIDTH_DESC="Hier kann die Stärke der Borders in px, % usw angegeben werden"
 MOD_ARTICLES_NEWS_LOAD_MORE_COLOR_BUTTON_LABEL="Farbe Button"
 MOD_ARTICLES_NEWS_LOAD_MORE_COLOR_BUTTON_DESC="Hier kann die Hintergrundfarbe für den Nachlade-Button definiert werden"
 MOD_ARTICLES_NEWS_LOAD_MORE_FONT_COLOR_BUTTON_LABEL="Schriftfarbe Button"
@@ -98,3 +98,19 @@ MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_STYLE_LABEL="Border Style"
 MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_STYLE_DESC="Hier kann die Art der Umrandung eingestellt werden, z.B. solid, dotted oder auch none"
 MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_FONT_SIZE_TEXT_LABEL="Schriftgrösse Button"
 MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_FONT_SIZE_TEXT_DESC="Hier kann die Schriftgrösse für den Nachlade-Button definiert werden"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_HOVER_LABEL="Button Hover Style"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_HOVER_DESC="Hier kann der Hover Style angepasst werden, z.B. lighten, darken, spin (invertiert die Farben um den angegebenen Wert...)"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_HOVER_VALUE_LABEL="Button Hover Wert"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_HOVER_VALUE_DESC="Hier kann angegeben werden, um wieviel Prozent/Grad der Button aufgehellt, invertiert oder gefaded werden soll."
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_STYLE_LABEL="Weiterlesen Button"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_STYLE_DESC="Hier kann die Art des Weiterlesen-Buttons angepasst werden"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_TEXT_LABEL="Weiterlesen Text"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_TEXT_DESC="HIer kann der Text für den Weiterlesen-Button definiert werden. Bei leerem Feld wird kein Weiterlesen-Text angezeigt"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_ICON_LABEL="Weiterlesen Icon vergrössern"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_ICON_DESC="Das Icon ist an die Textgrösse angepasst. Wenn KEIN Weiterlesen-Text genutzt wird, kann hier die Icongrösse angepasst werden."
+MOD_ARTICLES_NEWS_LOAD_MORE_HOVER_COLOR_LABEL="Hover Farbe"
+MOD_ARTICLES_NEWS_LOAD_MORE_HOVER_COLOR_DESC="Hier kann die allgemeine Hoverfarbe eingestellt werden"
+MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_LABEL="Bildfilter"
+MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_DESC="Mit dem Bildfilter können die Bilder des Teasers und der Blogposts mit CSS3 Filtern angepasst werden"
+MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_LABEL="Bildfilter Wert"
+MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_DESC="Hier muss der Wert festgelegt werden. Er kann je nach Einstellung variieren. Dazu siehe mehr https://www.w3schools.com/cssref/css3_pr_filter.asp"
