--- a/languages/en-GB/en-GB.mod_articles_news_load_more.ini
+++ b/languages/en-GB/en-GB.mod_articles_news_load_more.ini
@@ -59,3 +59,59 @@ MOD_ARTICLES_NEWS_LOAD_MORE_ANIMATIONEN_SPEED_POSTS_LABEL="Animation speed Blogp
 MOD_ARTICLES_NEWS_LOAD_MORE_ANIMATIONEN_SPEED_POSTS_DESC="Here you can specify the animation speed for Blogpost animations in seconds or milliseconds (for example 500ms)"
 MOD_ARTICLES_NEWS_LOAD_MORE_ANIMATIONEN_DELAY_POSTS_LABEL="Animation delay Blogposts"
 MOD_ARTICLES_NEWS_LOAD_MORE_ANIMATIONEN_DELAY_POSTS_DESC="Here you can set the animation delay for Blogposts"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_RADIUS_LABEL="Border radius"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_RADIUS_DESC="You can define the border radius in px, %, em..."
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_BG_LABEL="Teaser Background"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_BG_DESC="Here you can set a background color for the teaser. The background color can also be set transparent"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_BG_LABEL="Post Background"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_BG_DESC="Here you can set a background color for the teaser. The background color can also be set transparent"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_COLOR_LABEL="Teaser Font color"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_COLOR_DESC="Here the font color of the teaser can be set as rgba"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_FONT_COLOR_LABEL="Post Font color"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_FONT_COLOR_DESC="Here the font color of the posts can be set as rgba"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_FONT_SIZE_TEXT_LABEL="Font size text Posts"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_FONT_SIZE_TEXT_DESC="Here the font size for the text of the blog post can be adjusted"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_FONT_SIZE_HEADLINE_LABEL="Font size headlines Blogposts"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_FONT_SIZE_HEADLINE_DESC="Here the font size for the headlines of the blog posts can be adjusted"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_SIZE_TEXT_LABEL="Font color text Teaser"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_SIZE_TEXT_DESC="Here the font size for the text of the teaser can be adjusted"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_SIZE_HEADLINE_LABEL="Font size headlines Teaser"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_SIZE_HEADLINE_DESC="Here the font size for the headlines of the teaser can be adjusted"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_FONT_COLOR_HEADLINE_LABEL="Font color headlines Blogposts"
+MOD_ARTICLES_NEWS_LOAD_MORE_POST_FONT_COLOR_HEADLINE_DESC="Here you can set the font color of the headlines of the blog posts"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_COLOR_HEADLINE_LABEL="Font color headlines Teaser"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEASER_FONT_COLOR_HEADLINE_DESC="Here you can set the font color of the headlines of the teaser"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_COLOR_LABEL="Border color"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_COLOR_DESC="Here you can set the border color as rgba"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_WIDTH_LABEL="Border width"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_WIDTH_DESC="Here you can set the border width in px, %..."
+MOD_ARTICLES_NEWS_LOAD_MORE_COLOR_BUTTON_LABEL="Color Button"
+MOD_ARTICLES_NEWS_LOAD_MORE_COLOR_BUTTON_DESC="Here you can set the background color of the load more button"
+MOD_ARTICLES_NEWS_LOAD_MORE_FONT_COLOR_BUTTON_LABEL="Font color Button"
+MOD_ARTICLES_NEWS_LOAD_MORE_FONT_COLOR_BUTTON_DESC="Here you can set the font color of the load more button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_COLOR_BUTTON_LABEL="Border color Button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_COLOR_BUTTON_DESC="Here you can set the border color of the button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_WIDTH_BUTTON_LABEL="Border width Button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_WIDTH_BUTTON_DESC="Here you can set the border width for the load more button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_RADIUS_BUTTON_LABEL="Border radius Button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_RADIUS_BUTTON_DESC="Here you can set the border radius for the load more button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_STYLE_LABEL="Border Style"
+MOD_ARTICLES_NEWS_LOAD_MORE_BORDER_STYLE_DESC="Here you can set the general border style, e.g. solid, dotted or even none"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_FONT_SIZE_TEXT_LABEL="Font size Button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_FONT_SIZE_TEXT_DESC="Here you can set the font size for the load more button"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_HOVER_LABEL="Button Hover Style"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_HOVER_DESC="Here you can set a hover style, based on the general buttons color, e.g. lighten, darken, spin"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_HOVER_VALUE_LABEL="Button Hover Value"
+MOD_ARTICLES_NEWS_LOAD_MORE_BUTTON_HOVER_VALUE_DESC="Here you can set how much the hover style should darken, lighten or spin..."
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_STYLE_LABEL="Readmore Button"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_STYLE_DESC="Here you can set the style of readmore button"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_TEXT_LABEL="Readmore Text"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_TEXT_DESC="Here you can set the readmore text. If you leave it empty, no readmore text will be used"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_ICON_LABEL="Scale read more icon"
+MOD_ARTICLES_NEWS_LOAD_MORE_READMORE_ICON_DESC="The icon is based on the text font size. If there is NO READMORE TEXT in use, you can scale the icon size here"
+MOD_ARTICLES_NEWS_LOAD_MORE_HOVER_COLOR_LABEL="Hover color"
+MOD_ARTICLES_NEWS_LOAD_MORE_HOVER_COLOR_DESC="Here yopu can set the general hover color for headlines, links and readmore"
+MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_LABEL="Image filters"
+MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_DESC="With image filters you can apply CSS3 Filters onto your blogi images"
+MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_LABEL="Image filter value"
+MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_DESC="Here you can set the value for the image filter. More information https://www.w3schools.com/cssref/css3_pr_filter.asp"
