--- a/languages/de-DE/de-DE.mod_articles_news_load_more.ini
+++ b/languages/de-DE/de-DE.mod_articles_news_load_more.ini
@@ -114,3 +114,5 @@ MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_LABEL="Bildfilter"
 MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_DESC="Mit dem Bildfilter können die Bilder des Teasers und der Blogposts mit CSS3 Filtern angepasst werden"
 MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_LABEL="Bildfilter Wert"
 MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_DESC="Hier muss der Wert festgelegt werden. Er kann je nach Einstellung variieren. Dazu siehe mehr https://www.w3schools.com/cssref/css3_pr_filter.asp"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_LABEL="Beitragstexte anzeigen"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_DESC="Hier können die Beitragstexte ein- oder ausgeschaltet werden"
