--- a/languages/en-GB/en-GB.mod_articles_news_load_more.ini
+++ b/languages/en-GB/en-GB.mod_articles_news_load_more.ini
@@ -115,3 +115,5 @@ MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_LABEL="Image filters"
 MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_DESC="With image filters you can apply CSS3 Filters onto your blogi images"
 MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_LABEL="Image filter value"
 MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_DESC="Here you can set the value for the image filter. More information https://www.w3schools.com/cssref/css3_pr_filter.asp"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_LABEL="Show Article text"
+MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_DESC="Here you can set whether the article text will be shown"
