- added multi categories - added date format - added box shadows - styled backend view

--- a/language/de-DE/de-DE.mod_articles_news_load_more.ini
+++ b/language/de-DE/de-DE.mod_articles_news_load_more.ini
@@ -4,6 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+MOD_ARTICLES_NEWS_LOAD_MORE_YES="Ja"
+MOD_ARTICLES_NEWS_LOAD_MORE_NO="Nein"
 MOD_ARTICLES_NEWS="Beiträge - Newsflash"
 MOD_ARTICLES_NEWS_FIELD_FEATURED_DESC="Anzeigen oder Ausblenden von Haupteinträgen."
 MOD_ARTICLES_NEWS_FIELD_FEATURED_LABEL="Haupteinträge"
@@ -116,3 +118,26 @@ MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_LABEL="Bildfilter Wert"
 MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_DESC="Hier muss der Wert festgelegt werden. Er kann je nach Einstellung variieren. Dazu siehe mehr https://www.w3schools.com/cssref/css3_pr_filter.asp"
 MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_LABEL="Beitragstexte anzeigen"
 MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_DESC="Hier können die Beitragstexte ein- oder ausgeschaltet werden"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATE_TRIGGER_LABEL="Datum anzeigen"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATE_TRIGGER_DESC="Hier kann das Datum ein- oder ausgeschaltet werden"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATEFORMAT_LABEL="Datumsformat"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATEFORMAT_DESC="HIer kann das Datumsformat angepasst werden, siehe dazu auch http://php.net/manual/de/function.date.php"
+MOD_ARTICLES_NEWS_LOAD_MORE_BOX_SHADOW_LABEL="Box Schatten"
+MOD_ARTICLES_NEWS_LOAD_MORE_BOX_SHADOW_DESC="Hier können Sie Schatten für die Boxen an oder abschalten"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_COLOR_LABEL="Schattenfarbe"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_COLOR_DESC="Legen Sie hier die Schattenfarbe fest"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_H_LABEL="Horizontaler Abstand"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_H_DESC="Legen Sie den horizontalen Abstand für den Schatten fest"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_V_LABEL="Vertikaler Abstand"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_V_DESC="Legen Sie hier den vertikalen Abstand für den Schatten fest"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_BLUR_LABEL="Schatten Weichzeichung"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_BLUR_DESC="Legen Sie hier die Weichzeichnung für den Schatten fest"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_LABEL="Schatten Ausbreitung"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_DESC="Legen Sie hier die Ausbreiung des Schatten fest"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BOXSHADOW="<h3>Box Shadow</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_CONTROL_BUTTON="<h3>Modulsteuerung</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_ARTICLE_CONTROL="<h3>Artikelsteuerung</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BORDER_RADIUS="<h3>Borders</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_LOAD_MORE="<h3>Nachladen Button</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_SPOTLIGHT="<h3>Spotlight Artikel anpassen</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_POSTS="<h3>Artikel anpassen</h3>"
