--- a/language/en-GB/en-GB.mod_articles_news_load_more.ini
+++ b/language/en-GB/en-GB.mod_articles_news_load_more.ini
@@ -117,3 +117,26 @@ MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_LABEL="Image filter value"
 MOD_ARTICLES_NEWS_LOAD_MORE_IMAGE_FILTER_VALUE_DESC="Here you can set the value for the image filter. More information https://www.w3schools.com/cssref/css3_pr_filter.asp"
 MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_LABEL="Show Article text"
 MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_DESC="Here you can set whether the article text will be shown"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATE_TRIGGER_LABEL="Show date"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATE_TRIGGER_DESC="Here you can set if the date will be shown"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATEFORMAT_LABEL="Date format"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATEFORMAT_DESC="Here you can set the date format, see also http://php.net/manual/en/function.date.php"
+MOD_ARTICLES_NEWS_LOAD_MORE_BOX_SHADOW_LABEL="Box Shadow"
+MOD_ARTICLES_NEWS_LOAD_MORE_BOX_SHADOW_DESC="Here you can activate/deactivate box shadows"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_COLOR_LABEL="Shadow color"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_COLOR_DESC="Here you can set the shadow color"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_H_LABEL="Horizontal length"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_H_DESC="Defines the horizontal length of the shadow"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_V_LABEL="Vertical length "
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_V_DESC="Defines the vertical length of the shadow"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_BLUR_LABEL="Shadow blur"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_BLUR_DESC="Defines the shadow blur in px"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_LABEL="Shadow spread"
+MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_DESC="Defines the spread of the shadow in px"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BOXSHADOW="<h3>Box Shadow</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_CONTROL_BUTTON="<h3>Module control</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_ARTICLE_CONTROL="<h3>Article control</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BORDER_RADIUS="<h3>Borders</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_LOAD_MORE="<h3>Load more button</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_SPOTLIGHT="<h3>Styling Spotlight Article</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_POSTS="<h3>Styling Posts</h3>"
