- fixed loading bug at fields support - removed fields support - fixed styling bugs - added base item

--- a/languages/de-DE/de-DE.mod_articles_news_load_more.ini
+++ b/languages/de-DE/de-DE.mod_articles_news_load_more.ini
@@ -141,3 +141,7 @@ MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BORDER_RADIUS="<h3>Borders</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_LOAD_MORE="<h3>Nachladen Button</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_SPOTLIGHT="<h3>Spotlight Artikel anpassen</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_POSTS="<h3>Artikel anpassen</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_TRIGGER_LABEL="Basiseintrag auswählen"
+MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_TRIGGER_DESC="Wählen Sie hier einen Basiseintrag aus auf den die Menübeiträge verlinken"
+MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_LABEL="Basiseintrag"
+MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_DESC="Basiseintrag setzen um die Verlinkung der einzelnen Artikel anzupassen"
