--- a/languages/en-GB/en-GB.mod_articles_news_load_more.ini
+++ b/languages/en-GB/en-GB.mod_articles_news_load_more.ini
@@ -140,3 +140,7 @@ MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BORDER_RADIUS="<h3>Borders</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_LOAD_MORE="<h3>Load more button</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_SPOTLIGHT="<h3>Styling Spotlight Article</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_POSTS="<h3>Styling Posts</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_TRIGGER_LABEL="Base item"
+MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_TRIGGER_DESC="Here you can choose if you want to set a base item for your box links"
+MOD_ARTICLES_NEWS_LOAD_MORE_LABEL="Chosse base item"
+MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_DESC="Set the base item to which your box detail links should link"
