- added borders for button and posts

--- a/languages/de-DE/de-DE.mod_articles_news_load_more.ini
+++ b/languages/de-DE/de-DE.mod_articles_news_load_more.ini
@@ -121,7 +121,7 @@ MOD_ARTICLES_NEWS_LOAD_MORE_TEXT_TRIGGER_DESC="Hier können die Beitragstexte ei
 MOD_ARTICLES_NEWS_LOAD_MORE_DATE_TRIGGER_LABEL="Datum anzeigen"
 MOD_ARTICLES_NEWS_LOAD_MORE_DATE_TRIGGER_DESC="Hier kann das Datum ein- oder ausgeschaltet werden"
 MOD_ARTICLES_NEWS_LOAD_MORE_DATEFORMAT_LABEL="Datumsformat"
-MOD_ARTICLES_NEWS_LOAD_MORE_DATEFORMAT_DESC="HIer kann das Datumsformat angepasst werden, siehe dazu auch http://php.net/manual/de/function.date.php"
+MOD_ARTICLES_NEWS_LOAD_MORE_DATEFORMAT_DESC="HIer kann das Datumsformat angepasst werden, siehe dazu auch http://php.net/manual/de/function.strftime.php"
 MOD_ARTICLES_NEWS_LOAD_MORE_BOX_SHADOW_LABEL="Box Schatten"
 MOD_ARTICLES_NEWS_LOAD_MORE_BOX_SHADOW_DESC="Hier können Sie Schatten für die Boxen an oder abschalten"
 MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_COLOR_LABEL="Schattenfarbe"
@@ -137,9 +137,9 @@ MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_DESC="Legen Sie hier die Ausbreiung de
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BOXSHADOW="<h3>Box Shadow</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_CONTROL_BUTTON="<h3>Modulsteuerung</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_ARTICLE_CONTROL="<h3>Artikelsteuerung</h3>"
-MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BORDER_RADIUS="<h3>Borders</h3>"
-MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_LOAD_MORE="<h3>Nachladen Button</h3>"
-MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_SPOTLIGHT="<h3>Spotlight Artikel anpassen</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BORDER_RADIUS="<h3>Border</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_LOAD_MORE="<h3>Styling Nachlade Button</h3>"
+MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_SPOTLIGHT="<h3>Styling Spotlight Artikel</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_POSTS="<h3>Artikel anpassen</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_TRIGGER_LABEL="Basiseintrag auswählen"
 MOD_ARTICLES_NEWS_LOAD_MORE_BASEITEM_TRIGGER_DESC="Wählen Sie hier einen Basiseintrag aus auf den die Menübeiträge verlinken"
