- added custom font hover for button

--- a/languages/de-DE/de-DE.mod_articles_news_load_more.ini
+++ b/languages/de-DE/de-DE.mod_articles_news_load_more.ini
@@ -134,6 +134,8 @@ MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_BLUR_LABEL="Schatten Weichzeichung"
 MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_BLUR_DESC="Legen Sie hier die Weichzeichnung für den Schatten fest"
 MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_LABEL="Schatten Ausbreitung"
 MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_DESC="Legen Sie hier die Ausbreiung des Schatten fest"
+MOD_ARTICLES_NEWS_LOAD_MORE_FONT_HOVER_COLOR_BUTTON_LABEL="Schriftfarbe Hover"
+MOD_ARTICLES_NEWS_LOAD_MORE_FONT_HOVER_COLOR_BUTTON_DESC="HIer kann die Hover Schriftfarbe des Buttons angepasst werden"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BOXSHADOW="<h3>Box Shadow</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_CONTROL_BUTTON="<h3>Modulsteuerung</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_ARTICLE_CONTROL="<h3>Artikelsteuerung</h3>"
