--- a/languages/en-GB/en-GB.mod_articles_news_load_more.ini
+++ b/languages/en-GB/en-GB.mod_articles_news_load_more.ini
@@ -133,6 +133,8 @@ MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_BLUR_LABEL="Shadow blur"
 MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_BLUR_DESC="Defines the shadow blur in px"
 MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_LABEL="Shadow spread"
 MOD_ARTICLES_NEWS_LOAD_MORE_SHADOW_SPREAD_DESC="Defines the spread of the shadow in px"
+MOD_ARTICLES_NEWS_LOAD_MORE_FONT_HOVER_COLOR_BUTTON_LABEL="Hover font color"
+MOD_ARTICLES_NEWS_LOAD_MORE_FONT_HOVER_COLOR_BUTTON_DESC="Here you can set the hovering font color of the button"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_BOXSHADOW="<h3>Box Shadow</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_CONTROL_BUTTON="<h3>Module control</h3>"
 MOD_ARTICLES_NEWS_LOAD_MORE_HEADLINE_ARTICLE_CONTROL="<h3>Article control</h3>"
